# python-skill-creator

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
references/: python_project.md
scripts/: check.py  scaffold_python_skill.py  validate_skill.py
skills/python-skill-creator/: SKILL.md  pyproject.toml
skills/python-skill-creator/references/: python_project.md
skills/python-skill-creator/scripts/: check.py  scaffold_python_skill.py
skills/python-skill-creator/tests/: test_scaffold_python_skill.py
tests/: test_scaffold_python_skill.py
