[project]
name = "python-skill-creator"
version = "0.1.0"
description = "Create portable Codex skills with uv-managed Python runtimes."
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
